--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <hr>
     <h1>My Pic</h1>
     <p>
-      <img src="C:\Users\egarz\OneDrive\Desktop\tdm-rev-data-pt-06-2020-u-c\Week 11 - Web\2\Activities\01-Stu_HTMLBio\Picture.jpg"/ alt="This is actually San Francisco"
+      <img src="Images\Picture.jpg"/ alt="This is actually San Francisco"
     </p>
 
     <hr>
