--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <hr>
     <h1>My Pic</h1>
     <p>
-      <img src="Images\Picture.jpg"/ alt="This is actually San Francisco"
+      <img src="\Images\Picture.jpg"/ alt="This is actually San Francisco"
     </p>
 
     <hr>
